--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html{min-height: 100vh}
+html{min-height: 100vh; max-width: 100%;}
 @font-face {
     src: url("cursedtimer.ttf");
     font-family: CursedTimerULiL;
