--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @media only screen and (min-width: 600px) {
 
 html{min-height: 100vh; max-width: 100%;}
@@ -8,6 +15,8 @@ html{min-height: 100vh; max-width: 100%;}
 body {
   font-family: CursedTimerULiL, Verdana, 'Segoe UI', Tahoma, Geneva, sans-serif;
   /* background-color: #f4f4f4; */
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#3985b7), to(#f4f4f4));
+  background-image: -o-linear-gradient(bottom, #3985b7, #f4f4f4);
   background-image: linear-gradient(to top, #3985b7, #f4f4f4);
   padding: 30px;
   margin: 0;
@@ -39,10 +48,15 @@ footer{
 }
 
 #players {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 20px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 30px;
 }
 
@@ -51,7 +65,8 @@ footer{
   font-style: normal;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   padding: 20px;
   width: 150px;
   text-align: center;
@@ -118,6 +133,8 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  -webkit-transition: background-color 0.2s ease;
+  -o-transition: background-color 0.2s ease;
   transition: background-color 0.2s ease;
 }
 
@@ -180,6 +197,8 @@ html{min-height: 100%; max-width: 100%;}
 body {
   font-family: CursedTimerULiL, Verdana, 'Segoe UI', Tahoma, Geneva, sans-serif;
   /* background-color: #f4f4f4; */
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#3985b7), to(#f4f4f4));
+  background-image: -o-linear-gradient(bottom, #3985b7, #f4f4f4);
   background-image: linear-gradient(to top, #3985b7, #f4f4f4);
   padding: 12px;
   margin: 0;
@@ -212,10 +231,15 @@ footer{
 }
 
 #players {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 10px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 10px;
 }
 
@@ -224,7 +248,8 @@ footer{
   font-style: normal;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   padding: 10px;
   width: 150px;
   text-align: center;
@@ -291,6 +316,8 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  -webkit-transition: background-color 0.2s ease;
+  -o-transition: background-color 0.2s ease;
   transition: background-color 0.2s ease;
 }
 
@@ -354,4 +381,3 @@ button:disabled {
 }
 
 }
-
